fixed sidebar button not showing properly

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,9 +11,9 @@
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #888;
+  background-color: #3f79bb;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: #555;
+  background-color: #0a6cdc;
 }
